# binance-futures-backtest-research

./: .gitignore  AGENTS.md  BEST_CURRENT_PROMPT.md  ORIGINAL_REQUEST.md  PROJECT.md  PROMPT_EVOLUTION_LOG.md  README.md  RULES_AND_REGULATIONS.md  TEST_INFRA.md  WALKTHROUGH.md  check_data.py  pyproject.toml  task.md
.agents/: ORIGINAL_REQUEST.md
configs/: costs.yaml  project.yaml  stress_tests.yaml  walk_forward.yaml
project_memory/: AI_WORK_PROTOCOL.md  ARTIFACT_REGISTRY.csv  AUDIT_ALLOWLIST.csv  BENCHMARK_REGISTRY.csv  CURRENT_HANDOFF.md  DATA_REGISTRY.md  MASTER_PROJECT_STATE.md  MEMORY_INDEX.md  NEXT_PHASE_PLAN.md  OPEN_PROBLEMS.md  PHASE_HISTORY_TIMELINE.md  PROJECT_RULEBOOK.md  README_FOR_NEXT_AI.md  SOURCE_CLASSIFICATION_REGISTRY.csv
reports/: data_manifest_phase11_1.json  distillation_matrices.json  execution_checkpoint.json  final_strategy_research_report.md  hybrid_sweep_results.csv  phase10_1_audit_repair_and_revalidation_report.md  phase10_quality_floor_fusion_breakthrough_report.md  phase11_1_reproducibility_stress_audit_readiness_report.md  phase11_1_runner_results.json  phase11_research_idea_engine_regime_risk_mtf_precision_report.md  phase12_1_correction_and_fusion_failure_audit.md  phase12_2_filtered_orthogonal_alpha_repair_report.md  phase12_breakthrough_research_lab_report.md  phase12_readiness_pack.md  phase13_benchmark_breakthrough_mega_search_report.md  phase14_1_truth_lock_and_phase15_readiness_report.md  phase14_trade_dna_elite_fusion_breakthrough_report.md  phase15_benchmark_metrics_breakthrough_report.md  phase21_audit_manifest.json  (+570 more)
(+278 files in other folders)
