[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-futures-backtest"
version = "0.1.0"
description = "A research-focused BTCUSDT perpetual futures backtester, strategy optimizer, and auditor."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.4.0",
    "numpy>=1.22.0",
    "pyyaml>=6.0",
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
